--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@
 body {
 	background: white;
 }
+
+.pm-search-wrapper {
+	display: block;
+	position: absolute;
+	top: .5em;
+	right: .5em;
+	width: auto;
+	padding: 20px;
+	background: green;
+}
