--- a/style.css
+++ b/style.css
@@ -2,18 +2,33 @@
 
 body {
 	background: white;
+	font-family: sans-serif;
+	font-size: 12px;
+	color: #000;
 }
 
-.search-overlay {
+/* SEARCH OVERLAY */
+
+.search-cart-overlay {
 	display: block;
 	position: absolute;
-	top: .5em;
-	right: .5em;
+	top: 1em;
+	right: 1em;
 	width: auto;
-	padding: 20px;
-	background: lightgrey;
-	opacity: 0.9;
-	border: 1px solid grey;
+	opacity: 1;
+}
+
+.search-bar {
+	background: white;
+}
+
+.cart-image {
+	height: 50px;
+	width: 50px;
+}
+.cart-contents {
+	display: none;
+	background: white;
 }
 
 #info {
@@ -21,28 +36,34 @@ body {
 	width: 40%;
 }
 
-/* D3 testing CSS */
-.node {
-  cursor: pointer;
+/* PRODUCT OVERLAY */
+
+.product-overlay {
+	position: absolute;
+	height: 330px;
+	width: 500px;
+	padding: 20px;
+	background: rgba(255,255,255,1);
 }
 
-.node:hover {
-  stroke: #000;
-  stroke-width: 1.5px;
+.product-name {
 }
 
-.node--leaf {
-  fill: white;
+.product-image {
+	height: 200px;
+	width: 200px;
 }
 
-.label {
-  font: 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-anchor: middle;
-  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
+.product-price {
 }
 
-.label,
-.node--root,
-.node--leaf {
-  pointer-events: none;
+.data-tool {
+	position: absolute; 
+	top: 100px; 
+	left: 20px; 
+	font-size: 24px; 
+	color: red; 
+	z-index: 1000;
+	background: white;
 }
+
