--- a/style.css
+++ b/style.css
@@ -70,11 +70,20 @@ body {
 
 .data-tool {
 	position: absolute; 
-	top: 100px; 
-	left: 20px; 
-	font-size: 20px; 
+	top: 20px; 
+	left: 30px; 
+	font-size: 16px; 
 	color: red; 
 	z-index: 1000;
 	background: white;
 }
 
+.jump-strips-border {
+	border: 1px solid black;
+	top: 100px;
+	left: 100px;
+	height: 100px;
+	width: 100px;
+	position: absolute;
+	z-index: 1001;
+}
