--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 	font-family: sans-serif;
 	font-size: 12px;
 	color: #000;
+	background-image: url('../other-images/wood-floor-web.jpg');
 }
 
 /* SEARCH OVERLAY */
