--- a/style.css
+++ b/style.css
@@ -236,8 +236,8 @@ body {
 }
 
 .product-overlay .product-image {
-	height: 200px;
-	width: 200px;
+	height: 250px;
+	width: 250px;
 }
 
 .product-overlay .product-price {
@@ -253,7 +253,7 @@ body {
 	color: red; 
 	z-index: 1000;
 	background: white;
-  display: none;
+  display: block;
 }
 /*
 * MEDIA QUERIES
