--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
 body {
   overflow: hidden;
 	background: #f2f2f2;
-	font-family: Oswald;
+	font-family: Arial;
 	font-weight: 300;
 	font-size: 14px;
 	color: #474747;
